# solana-workshop

./: Cargo.toml
js/: client.js  example.js  package-lock.json  package.json
src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
tests/: test.rs
