[package]
name = "work-shop"
version = "0.1.0"
authors = ["Yuriy Savchenko <yuriy.savchenko@gmail.com>"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.6.8"
borsh = "0.8.2"

[dev-dependencies]
tokio = { version = "1.3.0", features = ["macros"]}
solana-program-test = "1.6.8"
solana-sdk = "1.6.8"

[lib]
crate-type = ["cdylib", "lib"]